[gd_scene load_steps=8 format=2]

[ext_resource path="res://start-assets/coin.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://Health Bar Asset Pack 2 by Adwit Rahman/pngfind.com-health-bar-png-1091472-1.png.png" type="Texture" id=3]
[ext_resource path="res://Health Bar Asset Pack 2 by Adwit Rahman/pngfind.com-health-bar-png-1091472.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="CircleShape2D" id=5]
radius = 36.0

[sub_resource type="CircleShape2D" id=3]
radius = 4867.06

[node name="Boss" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Coin" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="PlayerZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerZone"]
shape = SubResource( 3 )

[node name="Arm" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Hand" type="Node2D" parent="Arm"]
position = Vector2( 80, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -35.3333
margin_top = -62.0
margin_right = 321.667
margin_bottom = 15.0
rect_scale = Vector2( 0.2, 0.2 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="PlayerZone" to="." method="_on_PlayerZone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
